fix:add visible style for  navigation

--- a/pages/our-pets/our-pets-page-style.css
+++ b/pages/our-pets/our-pets-page-style.css
@@ -125,9 +125,7 @@ header {
   top: -3px;
   left: 1px;
 }
-.burger{
-  display: none;
-}
+
 @media (min-width: 768px) and (max-width: 1280px){
   .logo{
     position: relative;
